hphp/hack/test/typecheck/call_in_static_vec_like_array.php
<?php

class C {
  public static function f() {
    return "lol";
  }
  static $x = array(C::f());
}
